# sep

./: .gitignore  README.md  compose.override.yaml  compose.yaml  run.sh  stop.sh
bank/: README.md  compose.yaml  nginx.conf
bank/backend/: .env.example  docker-compose.yml
bank/erste/: compose.yaml  nginx.conf
bank/frontend/: index.html
bank/unicredit/: compose.yaml  nginx.conf
demo/: main.py  pyproject.toml
devops/fastapi-hot-reload/: Dockerfile  build-image.sh
devops/get-ips/: main.py  pyproject.toml
devops/scripts/: logsea.sh
devops/update-env/: main.py  pyproject.toml
devops/update-hosts/: main.py  pyproject.toml
docs/: README.md  SEP.drawio
pcc/: README.md  compose.yaml
pcc/backend/: .env.example  README.md  docker-compose.yml
psp/: README.md  compose.yaml
psp/card-handler/: README.md  compose.yaml
psp/core/: README.md  compose.yaml  nginx.conf
psp/core/backend/: .env.example  README.md  docker-compose.yml  pyproject.toml
psp/core/backend/app/: config.py  discovery.py  main.py
psp/core/backend/app/auth/: dependencies.py
psp/core/backend/app/merchants/: models.py  routes.py  schemas.py  service.py
psp/core/backend/app/methods/: models.py  routes.py  schemas.py  service.py
psp/core/backend/app/transactions/: models.py  routes.py  schemas.py  service.py
psp/crypto-handler/: README.md  compose.yaml  nginx.conf
psp/paypal-handler/: README.md  compose.yaml
psp/qr-handler/: README.md  compose.yaml  nginx.conf
psp/starter-handler/: compose.yaml  nginx.conf
telecom/: README.md  compose.yaml  nginx.conf
(+155 files in other folders)
